--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,30 +1,26 @@
-# ASP.NET Core
-# Build and test ASP.NET Core projects targeting .NET Core.
-# Add steps that run tests, create a NuGet package, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
-
   trigger:
-  - '*'
-
+    - '*'
+  
   pool:
     vmImage: 'ubuntu-20.04'
-    demands: -npm
-
+    demands:
+    - npm
+  
   variables:
     buildConfiguration: 'Release'
-
+  
   steps:
   - task: UseDotNet@2
     displayName: 'Use .NET SDK 5.x'
-    inputs: 
+    inputs:
       packageType: sdk
       version: '5.x'
-
+  
   - task: Npm@1
     displayName: 'Run npm install'
     inputs:
       verbose: false
-
+  
   - script: './node_modules/.bin/node-sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot'
     displayName: 'Compile Sass assets'
   
@@ -45,5 +41,5 @@
     displayName: 'Build the project - Release'
     inputs:
       command: 'build'
-      arguments: '--no-restore --conconfiguration Release'
+      arguments: '--no-restore --configuration Release'
       projects: '**/*.csproj'
